AVD/Deploy - NSG-AVD.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "yourEmailAddress":{
            "type": "string"
        },
        "customerPrefix": {
            "type": "String",
            "metadata": {
            "description": "Use 4 characters or less to identify the customer - ie: 'PAR' for Parachute"
            }
        },
        "bastionSubnet": {
                "type": "string",
                "metadata": {
                "description": "Bastion Subnet in CIDR notation"
            }
        },
        "domainControllerSubnet": {
                "type": "string",
                "metadata": {
                "description": "DC Subnet in CIDR notation"
            }
        },
        "date": {
            "type": "string",
            "defaultValue": "[utcNow('d')]",
            "metadata": {
                "description": "Do NOT Edit!"
            }
        }
    },
    "variables": {
        "NetworkSecurityGroupNameAVD": "[concat(toupper(parameters('customerPrefix')),'-AVD-NSG')]",
        "nsgRoleAVD": "NSG for AVD hosts",
        "nsgCostAVD": "AVD"        
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[variables('networkSecurityGroupNameAVD')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "Name": "[variables('networkSecurityGroupNameAVD')]",
                "Role": "[variables('nsgRoleAVD')]",
                "Owner": "[parameters('yourEmailAddress')]",
                "Cost": "[variables('nsgCostAVD')]",
                "Date": "[parameters('date')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "AVDServiceTraffic",
                        "properties": {
                            "description": "Outbound AVD Service Traffic ",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "WindowsVirtualDesktop",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Allow_Bastion",
                        "properties": {
                            "description": "Allows Bastion RDP sessions from Bastion subnet only",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "[parameters('bastionSubnet')]",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Allow_ICMP",
                        "properties": {
                            "protocol": "ICMP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Deny_All",
                        "properties": {
                            "description": "Deny all traffic ",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AzureCloud",
                        "properties": {
                            "description": "Outbound AVD Agent Traffic to Azure Cloud",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AzureKMS",
                        "properties": {
                            "description": "Outbound AVD Windows Activation",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1688",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "23.102.135.246",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AzureInstanceMetadata",
                        "properties": {
                            "description": "Azure Instance Metadata service endpoint",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "169.254.169.254",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "VMHealthMonitoring",
                        "properties": {
                            "description": "Session host health monitoring",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "168.63.129.16",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ADRulesTCP",
                        "properties": {
                            "description": "Active Directory - DNS, Group Policy, SMB etc",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "[parameters('domainControllerSubnet')]",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "53",
                                "88",
                                "135",
                                "389",
                                "445",
                                "464",
                                "636",
                                "49152-65535"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ADRulesUDP",
                        "properties": {
                            "description": "Active Directory - DNS, Group Policy, SMB etc",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "[parameters('domainControllerSubnet')]",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "53",
                                "88",
                                "135",
                                "389",
                                "445",
                                "464",
                                "636",
                                "49152-65535"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ICMP",
                        "properties": {
                            "protocol": "ICMP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 170,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAll",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Internet",
                        "properties": {
                            "description": "Allow internet access (80 required to download files)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "443",
                                "80"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "FSLogixStorage",
                        "properties": {
                            "description": "FSLogix Profiles",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "445",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 180,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RingCentral",
                        "properties": {
                            "description": "Signaling Secured Desktop and Web App (Required to make calls)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8083",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 190,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RingCentralMedia",
                        "properties": {
                            "description": "Media/Media Secured and media access control (Required for audio)",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 191,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "20000-64999",
                                "19302"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [
                                "66.81.240.0/20",
                                "80.81.128.0/20",
                                "103.44.68.0/22",
                                "104.245.56.0/21",
                                "185.23.248.0/22",
                                "192.209.24.0/21",
                                "199.68.212.0/22",
                                "199.255.120.0/22",
                                "208.87.40.0/22"
                            ]
                        }
                    },
                    {
                        "name": "WindowsUpdate",
                        "properties": {
                            "description": "Allow Windows Update",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureUpdateDelivery",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AzureFrontDoor",
                        "properties": {
                            "description": "Required for Windows Updates",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureFrontDoor.FirstParty",
                            "access": "Allow",
                            "priority": 201,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        }
   ]
}
